# feedback-inbox

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/: Dockerfile  environment.json  hooks.json
.cursor/hooks/: block-debug-artifacts.sh  check-tests.sh
.cursor/rules/: debug-instrumentation-cleanup.mdc  feature-sdlc.mdc
.cursor/skills/: ATTRIBUTION.md
.cursor/skills/api-smoke-testing/: SKILL.md
.cursor/skills/babysitting-pr/: SKILL.md
.cursor/skills/brainstorming/: SKILL.md
.cursor/skills/building-skills-from-patterns/: SKILL.md
.cursor/skills/creating-pr/: SKILL.md
.cursor/skills/finding-dev-server-url/: SKILL.md
.cursor/skills/grinding-until-pass/: SKILL.md
.cursor/skills/parallel-ci-triage/: SKILL.md
.cursor/skills/project-feature-sdlc/: SKILL.md
.cursor/skills/screenshotting-changelog/: SKILL.md
.cursor/skills/subagent-driven-development/: SKILL.md  code-quality-reviewer-prompt.md  (+2 more)
.github/workflows/: ci.yml
app/: db.py  main.py  models.py  schemas.py  services.py
context/: code-review.md  sdlc-compliance.md
context/retros/: 2026-06-25-category-filter.md
docs/: SKILLS-WORKFLOW.md  demo-runbook.md
docs/features/: 2026-06-25-category-filter-plan.md  2026-06-25-category-filter-smoke.md  2026-06-25-category-filter-spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
scripts/: reseed-demo-bug.sh  reseed_demo_bug.py  seed.py
scripts/patches/: demo-bug-reseed.patch
tests/: conftest.py  test_api.py  test_services.py
(+28 files in other folders)
